--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
 *{
     margin: 0;
 }
+
+.heroimg {
+    background-image: url(/img/bg.jpeg);
+    max-width: 100%;
+    height: 300px;
+    background-position: center;
+    background-size: 100% 200%;
+    text-align: center;
+}
