--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,31 @@
-*{
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.main_body {
+    background-color: rgb(204, 215, 112);
+    padding: 20px;
+}
+
+.hero_text {
+    margin-bottom: 10px;
+}
+
+.main_divs {
+    display: flex;
+    flex-direction: column;
+}
+
+.main-div1 {
+    background-color: orange;
+}
+
+.main-div2 {
+    background-color: red;
+}
+
+.main-div3 {
+    background-color: green;
 }
