--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,68 @@
+
 *{
     margin: 0;
 }
+
+.heroimg {
+    background-image: url(bg.jpeg);
+    max-width: 100%;
+    height: 300px;
+    background-position: center;
+    background-size: 100% 200%;
+    text-align: center;
+}
+thead,
+tfoot {
+    background-color: #3f87a6;
+    color: #fff;
+}
+
+tbody {
+    background-color: #e4f0f5;
+}
+
+caption {
+    padding: 10px;
+    caption-side: bottom;
+}
+
+table {
+    border-collapse: collapse;
+    border: 2px solid rgb(200, 200, 200);
+    letter-spacing: 1px;
+    font-family: sans-serif;
+    font-size: .8rem;
+}
+
+td,
+th {
+    border: 1px solid rgb(190, 190, 190);
+    padding: 5px 10px;
+}
+
+td {
+    text-align: center;
+}
+
+
+>Artist<hr></div>
+          <div class="grid lineup ">Vendor<hr></div>
+          <div class="grid lineup">Activity<hr></div>
+          <div class="grid">Daniel Cesar</div>
+          <div class="grid">Pizza</div>
+          <div class="grid">Ferris Wheel</div>  
+          <div class="grid">Doja Cat</div>
+          <div class="grid">Tacos</div>
+          <div class="grid"> The Do Lab</div>
+          <div class="grid">21 Savage</div>
+          <div class="grid">Seafood</div>  
+          <div class="grid">The Yuma Tent</div>
+          <div class="grid">Billie Eilish</div>
+          <div class="grid">BBQ</div>
+          <div class="grid">Art Exhibits</div>  
+          <div class="grid">Pink Sweat$</div>
+          <div class="grid">Sweet Shop</div>
+          <div class="grid">Fireworks</div>
+          <div class="grid">Baby Keem</div>  
+          <div class="grid"><img src="coachella.png"></div>
+          <div class="grid">Biergardens</div>
